Erstatt 404 med 2xx (TFP-2947)